Fix formatting of tar command examples

--- a/note-12-24-01153.md
+++ b/note-12-24-01153.md
@@ -4,7 +4,7 @@ The **tar** command used on Windows 10 or later.
 
 * Extract to current folder:
 
-\`\`\` tar \-xf filename.zip\`\`\`
+``` tar \-xf filename.zip```
 
 * Extract to specific dir: 
 
